src/main/antlr/Drink.g4
grammar Drink;
 
 @header {
 	package ca.ece.ubc.cpen221.parser;
 }
 
// Parser Rules
 
drinkSentence : ARTICLE? DRINKING_VESSEL OF drink ;
 
drink : TEXT;
 
// Lexer Rules
 
ARTICLE : 'the' | 'an' | 'a' ;
 
OF : 'of' ;
 
DRINKING_VESSEL : 'cup' | 'pint' | 'shot' | 'mug' | 'glass' ;
 
TEXT : ('a'..'z')+ ;
 
WHITESPACE : ( '\t' | ' ' | '\r' | '\n'| '\u000C' )+ -> skip ;
